# biokanga

./: .travis.yml  AUTHORS  COPYING  ChangeLog  Dockerfile  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.am.orig  Makefile.in  NEWS  README  README.licenses.txt  README.md  appveyor.yml  biokanga.sln  biosolutions.sln  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.lineno
Adaptors/: IlluminaAdaptersAll_nodup.fasta  IlluminaAdaptersAllpXENpQ108_nodup.fasta
BEDFilter/: BEDFilter.cpp  BEDFilter.vcxproj  Makefile  Makefile.am  Makefile.in  stdafx.cpp  stdafx.h
BEDMerge/: BEDMerge.cpp  BedMerge.vcxproj  ChromFeatures.cpp  ChromFeatures.h  Makefile  Makefile.am  Makefile.in  stdafx.cpp  stdafx.h
DNAseqSitePotential/: DNAseqSitePotential.cpp  DNAseqSitePotential.vcxproj  Makefile  Makefile.am  Makefile.in
Docs/: BiokangaAlignerApplicationNote.docx  BiokangaAssembApplicationNote.docx  BiokangaFilterApplicationNote.docx  BiokangaNGSQualityCheckApplicationNote.docx  BiokangaSNPCultivarMarkerAssociationApplicationNote.docx  BiokangaSNPcalling.docx  BiokangaScaffolderApplicationNote.docx  Biokanga_4_2_0.docx  PacBioKanga_4_2_0.docx  biokanga.align.txt  biokanga.assemb.txt  biokanga.blitz.txt  biokanga.contigs.txt  biokanga.de2sqlite.txt  biokanga.eccontigs.txt  biokanga.ecreads.txt  biokanga.fasta2nxx.txt  biokanga.filtchrom.txt  biokanga.filter.txt  biokanga.gendeseq.txt  biokanga.index.txt  biokanga.kmarkers.txt  biokanga.kmerdist.txt  biokanga.locateroi.txt  biokanga.maploci.txt  biokanga.markerseqs.txt  biokanga.mergeoverlaps.txt  biokanga.ngsqc.txt  biokanga.pbsim.txt  biokanga.pescaffold.txt  biokanga.prekmarkers.txt  biokanga.pseudogenome.txt  biokanga.psl2sqlite.txt  biokanga.remaploci.txt  biokanga.rnade.txt  biokanga.scaffold.txt  biokanga.simreads.txt  biokanga.snpm2sqlite.txt  biokanga.snpmarkers.txt  (+9 more)
biokanga/: Aligner.cpp  Aligner.h  AlignsBootstrap.cpp  AlignsBootstrap.h  ArtefactReduce.cpp  ArtefactReduce.h  AssembGraph.cpp  AssembGraph.h  Assemble.cpp  Blitz.cpp  Blitz.h  FastaNxx.cpp  FastaNxx.h  FilterSAMAlignments.cpp  FilterSAMAlignments.h  Kangadna.cpp  Kangadna.h  LocKMers.cpp  LocKMers.h  LocateROI.cpp  LocateROI.h  Makefile  Makefile.am  Makefile.in  MapLoci2Feat.cpp  MapLoci2Feat.h  MarkerKMers.cpp  MarkerKMers.h  MarkerSeq.cpp  MarkerSeq.h  Markers.cpp  Markers.h  MergeReadPairs.cpp  MergeReadPairs.h  PEScaffold.cpp  PEScaffold.h  ReadStats.cpp  ReadStats.h  RemapLoci.cpp  RemapLoci.h  (+40 more)
biokanga/.deps/: Aligner.Po  ArtefactReduce.Po  AssembGraph.Po  Assemble.Po  Blitz.Po  FastaNxx.Po  FiltPacBio.Po  Kangadna.Po  LocKMers.Po  LocateROI.Po  MapLoci2Feat.Po  MarkerKMers.Po  MarkerSeq.Po  Markers.Po  MergeReadPairs.Po  PEScaffold.Po  PacBio.Po  ReadStats.Po  RemapLoci.Po  SQLiteDE.Po  SQLiteMarkers.Po  SQLitePSL.Po  SSRdiscovery.Po  Scaffolder.Po  SimReads.Po  biokanga.Po  csv2sqlite.Po  deNovoAssemb.Po  fastaextract.Po  filtreads.Po  genDESeq.Po  genkmarkers.Po  genmarkers.Po  genmarkerseq.Po  genpseudogenome.Po  gensnpmarkers.Po  kanga.Po  kangade.Po  kangax.Po  kmermarkers.Po  (+3 more)
libBKPLPlot/: BKPLPlot.cpp  BKPLPlot.h  BKPlots.cpp  EmbeddedPalettes.h  Makefile  Makefile.am  Makefile.in  csa.cpp  csa.h  dirent_msvc.h  disptab.h  drivers.h  dspline.cpp  dspline.h  dsplint.cpp  dsplint.h  libBKPLPlot.vcxproj  ltdl_win32.cpp  ltdl_win32.h  mem.cpp  metadefs.h  mt19937ar.cpp  mt19937ar.h  nan.h  pdf.h  pdfutils.cpp  plConfig.h  plDevs.h  plaffine.cpp  plarc.cpp  plargs.cpp  plbox.cpp  plbuf.cpp  plcont.cpp  plcore.cpp  plcore.h  plctrl.cpp  plcvt.cpp  pldebug.h  pldll.h  (+50 more)
libBKPLPlot/.deps/: BKPLPlot.Po  BKPlots.Po  csa.Po  dspline.Po  dsplint.Po  ltdl_win32.Po  mem.Po  mt19937ar.Po  pdfutils.Po  plaffine.Po  plarc.Po  plargs.Po  plbox.Po  plbuf.Po  plcont.Po  plcore.Po  plctrl.Po  plcvt.Po  pldtik.Po  plf2ops.Po  plfill.Po  plfreetype.Po  plgradient.Po  plgridd.Po  plhist.Po  plimage.Po  pllegend.Po  plline.Po  plmap.Po  plot3d.Po  plpage.Po  plsdef.Po  plshade.Po  plstdio.Po  plstripc.Po  plsym.Po  pltick.Po  pltime.Po  plvect.Po  plvpor.Po  (+5 more)
libbiokanga/: AlignValidate.cpp  AlignValidate.h  BEDfile.cpp  BEDfile.h  BioSeqFile.cpp  BioSeqFile.h  CSVFile.cpp  CSVFile.h  CVS2BED.cpp  CVS2BED.h  Centroid.cpp  Centroid.h  ConfSW.cpp  ConfSW.h  Conformation.cpp  Conformation.h  Contaminants.cpp  Contaminants.h  DSsort.cpp  DSsort.h  DataPoints.cpp  DataPoints.h  Diagnostics.cpp  Diagnostics.h  Endian.cpp  Endian.h  ErrorCodes.cpp  ErrorCodes.h  FMIndex.cpp  FMIndex.h  Fasta.cpp  Fasta.h  FeatLoci.cpp  FeatLoci.h  FilterLoci.cpp  FilterLoci.h  FilterRefIDs.cpp  FilterRefIDs.h  GFFFile.cpp  GFFFile.h  (+73 more)
libbiokanga/.deps/: AlignValidate.Po  BEDfile.Po  BioSeqFile.Po  CSVFile.Po  CVS2BED.Po  Centroid.Po  ConfSW.Po  Conformation.Po  Contaminants.Po  DataPoints.Po  Diagnostics.Po  Endian.Po  ErrorCodes.Po  Fasta.Po  FeatLoci.Po  FilterLoci.Po  FilterRefIDs.Po  GFFFile.Po  GOAssocs.Po  GOTerms.Po  GTFFile.Po  HashFile.Po  HyperEls.Po  MAlignFile.Po  MTqsort.Po  NeedlemanWunsch.Po  ProcRawReads.Po  Random.Po  RsltsFile.Po  SAMfile.Po  SSW.Po  SeqTrans.Po  SfxArray.Po  SfxArrayV2.Po  Shuffle.Po  SimpleRNG.Po  SmithWaterman.Po  SparseSW.Po  Stats.Po  StopWatch.Po  (+6 more)
pacbiokanga/: AssembGraph.cpp  AssembGraph.h  BKSProvider.cpp  BKSProvider.h  BKSRequester.cpp  BKSRequester.h  BKScommon.h  MAConsensus.cpp  MAConsensus.h  MAFKMerDist.cpp  MAFKMerDist.h  Makefile  Makefile.am  Makefile.in  PBAssemb.cpp  PBAssemb.h  PBECContigs.cpp  PBECContigs.h  PBErrCorrect.cpp  PBErrCorrect.h  PBFilter.cpp  PBFilter.h  PBFilter_Old.cpp  PBFilter_Old.h  PBSWService.cpp  PBSWService.h  PBScaffold.cpp  PBScaffold.h  PBSim.cpp  PBSim.h  PacBioUtility.cpp  PacBioUtility.h  SQLiteSummaries.cpp  SSW.cpp  SSW.h  SWAlign.cpp  SWAlign.h  SeqStore.cpp  SeqStore.h  makestatic.sh  (+7 more)
pacbiokanga/.deps/: AssembGraph.Po  BKSProvider.Po  BKSRequester.Po  MAConsensus.Po  MAFKMerDist.Po  PBAssemb.Po  PBECContigs.Po  PBErrCorrect.Po  PBFilter.Po  PBSWService.Po  PBScaffold.Po  PBSim.Po  PacBioUtility.Po  SQLiteSummaries.Po  SSW.Po  SWAlign.Po  SeqStore.Po  pacbiokanga.Po
(+757 files in other folders)
