SUBDIRS = libbiokanga libBKPLPlot genhyperconserved genbiobed \
	  genbiomultialign splitmultifasta genhyperdropouts \
	  genelementseq psl2csv FindShortApproxMatches locsfx \
	  csvmerge csv2bed csv2fasta bed2csv csvfilter \
	  locseqs gensampler \
	  csv2stats genloci2gene locsw \
	  fasta2dist fasta2bed FastaToPE quickcount csv2feat genalignstats \
	  genalignref2relloci genalignloci2core maploci2features \
	  processcsvfiles genalignconf Loci2Phylip blast2csv genrollups \
	  genWiggle proccentroids gencentroidmetrics SimulateMNase predconfnucs \
	  gengoterms gengoassoc goassoc \
	  DNAseqSitePotential RNAseqSitePotential prednucleosomes gennucstats \
          uhamming LocateROI genDESeq genGenomeFromAGP kangarg genultras \
	  genstructprofile filterreads fasta2struct ufilter genseqcandidates genmarkers GFFfilter \
	  genElementProfiles BEDMerge BEDFilter loci2dist genzygosity genNormWiggle GTFfilter genDiffExpr \
          dmpbioseq genpseudogenome usimdiffexpr genreadsde HammingDist RNAFragSim mergeoverlaps fastafilter \
          kanga kangasr kangar kangahrdx kangade kangas kangapr csv2sqlite biokanga locmarkers PEscaffold SSRdiscovery pacbiokanga 
