SUBDIRS = libbiokanga libBKPLPlot genhyperconserved genbiobed \
	  genbiomultialign splitmultifasta genhyperdropouts \
	  genelementseq psl2csv FindShortApproxMatches \
	  csvmerge csv2bed csv2fasta bed2csv csvfilter \
	  gensampler gencomposition \
	  csv2stats genloci2gene \
	  fasta2dist fasta2bed FastaToPE quickcount csv2feat genalignstats \
	  genalignref2relloci genalignloci2core maploci2features \
	  processcsvfiles genalignconf Loci2Phylip blast2csv genrollups \
	  genWiggle proccentroids gencentroidmetrics SimulateMNase predconfnucs \
	  DNAseqSitePotential RNAseqSitePotential prednucleosomes gennucstats \
          uhamming LocateROI genDESeq genGenomeFromAGP kangarg genultras \
	  genstructprofile genstructstats filterreads fasta2struct ufilter genseqcandidates genmarkers GFFfilter \
	  genElementProfiles BEDMerge BEDFilter loci2dist genzygosity genNormWiggle GTFfilter \
          dmpbioseq genpseudogenome HammingDist RNAFragSim fastafilter \
          kangar kangahrdx kangapr csv2sqlite biokanga locmarkers PEscaffold SSRdiscovery pacbiokanga
AUTOMAKE_OPTIONS = foreign
