AC_INIT(libbiokanga/BEDfile.cpp)
AC_CHECK_LIB(gslcblas,main)
AC_CHECK_LIB(gsl,main)
AC_CHECK_LIB(pthread,main)
AC_CHECK_LIB(dl,main)
AC_CHECK_LIB(rt,main)
PACKAGE=biosolutions
VERSION=0.1.1
AM_INIT_AUTOMAKE($PACKAGE,$VERSION)
AC_PROG_RANLIB
AC_CONFIG_HEADERS(config.h)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_OUTPUT(Makefile libbiokanga/Makefile libBKPLPlot/Makefile genhyperconserved/Makefile
	 genbiobed/Makefile genbiomultialign/Makefile
	 splitmultifasta/Makefile genelementseq/Makefile psl2csv/Makefile
	 genhyperdropouts/Makefile
	 FindShortApproxMatches/Makefile locsfx/Makefile
	 csvmerge/Makefile csv2bed/Makefile csv2fasta/Makefile csvfilter/Makefile bed2csv/Makefile
	 FastaToPE/Makefile locseqs/Makefile gensampler/Makefile
	 csv2stats/Makefile fasta2bed/Makefile genloci2gene/Makefile genalignstats/Makefile
	 fasta2dist/Makefile locsw/Makefile quickcount/Makefile csv2feat/Makefile
	 genalignref2relloci/Makefile genalignloci2core/Makefile maploci2features/Makefile
	 processcsvfiles/Makefile genalignconf/Makefile Loci2Phylip/Makefile blast2csv/Makefile genrollups/Makefile
	 gengoterms/Makefile gengoassoc/Makefile goassoc/Makefile
	 genWiggle/Makefile gencentroidmetrics/Makefile proccentroids/Makefile DNAseqSitePotential/Makefile SimulateMNase/Makefile
	 filterreads/Makefile prednucleosomes/Makefile RNAseqSitePotential/Makefile
	 genDESeq/Makefile fasta2struct/Makefile kangarg/Makefile genultras/Makefile
 	 LocateROI/Makefile genstructprofile/Makefile predconfnucs/Makefile gennucstats/Makefile fastafilter/Makefile
	 BEDMerge/Makefile BEDFilter/Makefile genElementProfiles/Makefile genzygosity/Makefile genGenomeFromAGP/Makefile genmarkers/Makefile
	 HammingDist/Makefile genreadsde/Makefile ufilter/Makefile uhamming/Makefile genseqcandidates/Makefile GFFfilter/Makefile loci2dist/Makefile
         genNormWiggle/Makefile GTFfilter/Makefile genDiffExpr/Makefile dmpbioseq/Makefile genpseudogenome/Makefile usimdiffexpr/Makefile RNAFragSim/Makefile mergeoverlaps/Makefile
         kanga/Makefile kangar/Makefile kangasr/Makefile kangahrdx/Makefile kangade/Makefile kangas/Makefile kangapr/Makefile
	 csv2sqlite/Makefile biokanga/Makefile locmarkers/Makefile PEscaffold/Makefile SSRdiscovery/Makefile pacbiokanga/Makefile )
