AC_INIT(libbiokanga/BEDfile.cpp)
AC_CHECK_LIB(gslcblas,main)
AC_CHECK_LIB(gsl,main)
AC_CHECK_LIB(pthread,main)
AC_CHECK_LIB(dl,main)
AC_CHECK_LIB(rt,main)
PACKAGE=biokanga
VERSION=0.9.0
AM_INIT_AUTOMAKE($PACKAGE,$VERSION)
AC_PROG_RANLIB
AC_CONFIG_HEADERS(config.h)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_OUTPUT(Makefile libbiokanga/Makefile libBKPLPlot/Makefile biokanga/Makefile pacbiokanga/Makefile)

