noinst_LIBRARIES = libBKPLPlot.a
libBKPLPlot_a_SOURCES = BKPlots.cpp dsplint.cpp pdfutils.cpp plbox.cpp plctrl.cpp plfill.cpp plhist.cpp plmap.cpp plshade.cpp pltick.cpp plwind.cpp \
                     svg.cpp \
                     BKPLPlot.cpp ltdl_win32.cpp plaffine.cpp plbuf.cpp plcvt.cpp plfreetype.cpp plimage.cpp plot3d.cpp plstdio.cpp  pltime.cpp qsastime.cpp \
                     csa.cpp mem.cpp  plarc.cpp plcont.cpp pldtik.cpp plgradient.cpp pllegend.cpp plpage.cpp plstripc.cpp plvect.cpp qsastime_extra.cpp \
                     dspline.cpp mt19937ar.cpp plargs.cpp plcore.cpp plf2ops.cpp plgridd.cpp plline.cpp plsdef.cpp plsym.cpp plvpor.cpp stdafx.cpp 

# set the include path found by configure
INCLUDES= -I../hdrs -I@top_srcdir@/ -I$(all_includes)

