bin_PROGRAMS = pacbiokanga
pacbiokanga_SOURCES= SQLiteSummaries.cpp SQLiteSummaries.h PBFilter.cpp PBFilter.h pacbiocommon.h PacBioUtility.cpp PacBioUtility.h PBScaffold.cpp PBScaffold.h pacbiokanga.cpp pacbiokanga.h PBSim.cpp PBSim.h 

# set the include path found by configure
INCLUDES= $(all_includes)

# our library
LDADD = ../libbiokanga/libbiokanga.a ../libbiokanga/zlib/libz.a ../libBKPLPlot/libBKPLPlot.a

