bin_PROGRAMS = pacbiokanga
pacbiokanga_SOURCES= SQLiteSummaries.cpp SQLiteSummaries.h SSW.cpp SSW.h PBAssemb.cpp PBAssemb.h PBECContigs.cpp PBECContigs.h SeqStore.cpp SeqStore.h PBFilter.cpp PBFilter.h pacbiocommon.h PacBioUtility.cpp PacBioUtility.h pacbiokanga.cpp pacbiokanga.h PBSim.cpp PBSim.h PBErrCorrect.cpp PBErrCorrect.h AssembGraph.cpp AssembGraph.h 

# set the include path found by configure
INCLUDES= $(all_includes)

# our library
LDADD = ../libbiokanga/libbiokanga.a ../libbiokanga/zlib/libz.a ../libBKPLPlot/libBKPLPlot.a

